# img

./: .round_to_int.cc.swp  CMakeLists.txt  README.md  file_parser.gcda  idea.txt  image_handle.gcda  input_handle.cc!  input_handle.gcda  main.gcda  makefile  point.gcda  round_to_int.gcda  util.gcda
src/: file_parser.cc  image_handle.cc  inp_handle.cc  input_handle.cc  main.cc  round_to_int.cc  util.cc
src/include/: file_parser.hpp  image_handle.hpp  input_handle.hpp  point.hpp  round_to_int.hpp  util.hpp
test_imgs/: debug.txt  dump.txt  img  memcheck.txt
